# RPN

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REPORT.md
application/: CMakeLists.txt  Program.cpp  Program.hpp  main.cpp
src/: Expr.cpp  Expr.hpp  NotAnExpression.hpp  utils.cpp  utils.hpp
src/Token/: Token.hpp  TokenFun.cpp  TokenFun.hpp  TokenNum.hpp  TokenOpe.hpp  TokenPar.hpp
test/: CMakeLists.txt  ci_tests.cpp
test/testfiles/: validExpr.txt
