cmake_minimum_required(VERSION 3.03)
project(RPN)

set(CMAKE_CXX_STANDARD 14)

set(CMAKE_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(RPN_BUNDLE ${CMAKE_CURRENT_SOURCE_DIR}/Bundle-${CMAKE_CXX_COMPILER_ID})
set(RPN_3RDPARTY ${CMAKE_CURRENT_SOURCE_DIR}/3rdPartyLibs)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Debug)
endif()

if ( NOT CMAKE_PREFIX_PATH )
    set( CMAKE_PREFIX_PATH ${CMAKE_CURRENT_SOURCE_DIR} )
endif()

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY  ${RPN_BUNDLE}/${CMAKE_BUILD_TYPE}/bin)
set(EXECUTABLE_OUTPUT_PATH          ${RPN_BUNDLE}/${CMAKE_BUILD_TYPE}/bin)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${RPN_BUNDLE}/${CMAKE_BUILD_TYPE}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY  ${RPN_BUNDLE}/${CMAKE_BUILD_TYPE}/lib)

set(RPN_INCLUDE_DIR ${CMAKE_SOURCE_DIR})

file(GLOB_RECURSE sources ${CMAKE_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE headers ${CMAKE_SOURCE_DIR}/*.hpp)
file(GLOB_RECURSE inlines ${CMAKE_SOURCE_DIR}/*.inl)

add_library(${CMAKE_PROJECT_NAME} SHARED ${sources} ${headers} ${inlines})
target_link_libraries(${CMAKE_PROJECT_NAME} PUBLIC)

set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES LINKER_LANGUAGE CXX)
set_property(TARGET ${CMAKE_PROJECT_NAME} PROPERTY POSITION_INDEPENDENT_CODE ON)

add_subdirectory(application)
add_subdirectory(test EXCLUDE_FROM_ALL)